test/cases/compile_errors/labeled_break_not_found.zig
export fn entry() void {
    blah: while (true) {
        while (true) {
            break :outer;
        }
    }
}

// error
// backend=stage2
// target=native
//
// :4:20: error: label not found: 'outer'
